information-technology/programming-language/java/JVM, GC.md updated from https://stackedit.io/